# src/route/diagnosis.route.ts
@@ -1,0 +1,12 @@
+import { getUserDiagnosisController, saveDiagnosisController } from "../controller/diagnosis.controller";
+import { Router } from "express";
+import { protectedRoute } from "../service/utility.service";
+
+const route = Router()
+
+route.post("/saveDiagnosis", protectedRoute, saveDiagnosisController)
+
+route.get("/getUserDiagnosis", protectedRoute, getUserDiagnosisController)
+
+
+export default route
